--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,3 +3,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    display: none;
+}
+
+input[type=number] {
+    -moz-appearance: textfield;
+    /* Firefox */
+}
