--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,14 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+    .centered {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 3px;
+    }
+}
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
