--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,25 +1,25 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer utilities {
-    .centered {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 3px;
-    }
+  .centered {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 3px;
+  }
 }
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    display: none;
+  -webkit-appearance: none;
+  display: none;
 }
 
-input[type=number] {
-    -moz-appearance: textfield;
-    /* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+  /* Firefox */
 }
